src/aio/cass-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: worker #update
spec:
  selector:
    matchLabels:
      app: worker #update
  replicas: 1
  template:
    metadata:
      labels:
        app: worker #update
    spec:
      containers:
      - name: worker #update
        image: pconnell89/cass-db
        resources:
          requests:
            cpu: 2 #update
            memory: 6Gi #update
