src/aio/workerLookup-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: workerlookup
spec:
  selector:
    matchLabels:
      app: workerlookup
  replicas: 1
  template:
    metadata:
      labels:
        app: workerlookup
    spec:
      containers:
      - name: workerlookup
        image: pconnell89/lookupworker
        resources:
          requests:
            cpu: 100m 
            memory: 100Mi 
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: workerchar
#   labels:
#     app: workerchar
#     tier: backend
# spec:
#   ports:
#   selector:
#     app: workerchar
#     tier: backend
