src/aio/workerRoll-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: workerroll
spec:
  selector:
    matchLabels:
      app: workerroll
  replicas: 1
  template:
    metadata:
      labels:
        app: workerroll
    spec:
      containers:
      - name: workerroll
        image: pconnell89/rollworker
        resources:
          requests:
            cpu: 100m 
            memory: 100Mi 
          limits: 
            cpu: 100m
            memory: 100Mi
