src/aio/rabbitmq-service.yaml
#
# The original Google demo depended on gaving a service "redis-master" AND
# a service "redis-slave". We're using a single redis server, so we create
# two services that point to the same pod.
#
#


# apiVersion: rabbitmq.com/v1beta1
# kind: RabbitmqCluster
# metadata:
#   name: rabbitmq
#   labels:
#     app: rabbitmq
# spec:
#   rabbitmq:
     

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  ports:
    - protocol: "TCP"
      port: 5672
      targetPort: 5672
  selector:
    app: rabbitmq
