src/aio/haproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -o yaml_files
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: haproxy
  name: haproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: haproxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -o yaml_files
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/rabbitmq: "true"
        io.kompose.service: haproxy
    spec:
      containers:
      - image: haproxy:1.7
        imagePullPolicy: ""
        name: haproxy
        ports:
        - containerPort: 15672
        - containerPort: 5672
        resources: {}
        volumeMounts:
        - mountPath: /usr/local/etc/haproxy/haproxy.cfg
          name: haproxy-claim0
          readOnly: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: haproxy-claim0
        persistentVolumeClaim:
          claimName: haproxy-claim0
          readOnly: true
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -o yaml_files
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: haproxy
  name: haproxy
spec:
  ports:
  - name: "15672"
    port: 15672
    targetPort: 15672
  - name: "5672"
    port: 5672
    targetPort: 5672
  selector:
    io.kompose.service: haproxy
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: rabbitmq
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/rabbitmq: "true"
  podSelector:
    matchLabels:
      io.kompose.network/rabbitmq: "true"
---
