src/aio/rmq_cluster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -o yaml_files
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq1
  name: rabbitmq1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -o yaml_files
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/rabbitmq: "true"
        io.kompose.service: rabbitmq1
    spec:
      containers:
      - command:
        - /usr/local/bin/cluster-entrypoint.sh
        image: rmq-dndio #rabbitmq:3-management
        imagePullPolicy: ""
        name: rabbitmq1
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/rabbitmq/.erlang.cookie
          name: rabbitmq1-claim0
        - mountPath: /usr/local/bin/cluster-entrypoint.sh
          name: rabbitmq1-claim1
        - mountPath: /var/lib/rabbitmq/
          name: rabbitmq1-data
        - mountPath: /var/log/rabbitmq
          name: rabbitmq1-logs
      hostname: rabbitmq1
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: rabbitmq1-claim0
        persistentVolumeClaim:
          claimName: rabbitmq1-claim0
      - name: rabbitmq1-claim1
        persistentVolumeClaim:
          claimName: rabbitmq1-claim1
      - name: rabbitmq1-data
        persistentVolumeClaim:
          claimName: rabbitmq1-data
      - name: rabbitmq1-logs
        persistentVolumeClaim:
          claimName: rabbitmq1-logs
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -o yaml_files
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq2
  name: rabbitmq2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -o yaml_files
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/rabbitmq: "true"
        io.kompose.service: rabbitmq2
    spec:
      containers:
      - command:
        - /usr/local/bin/cluster-entrypoint.sh
        image: rmq-dndio #rabbitmq:3-management
        imagePullPolicy: ""
        name: rabbitmq2
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/rabbitmq/.erlang.cookie
          name: rabbitmq2-claim0
        - mountPath: /usr/local/bin/cluster-entrypoint.sh
          name: rabbitmq2-claim1
        - mountPath: /var/lib/rabbitmq/
          name: rabbitmq2-data
        - mountPath: /var/log/rabbitmq
          name: rabbitmq2-logs
      hostname: rabbitmq2
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: rabbitmq2-claim0
        persistentVolumeClaim:
          claimName: rabbitmq2-claim0
      - name: rabbitmq2-claim1
        persistentVolumeClaim:
          claimName: rabbitmq2-claim1
      - name: rabbitmq2-data
        persistentVolumeClaim:
          claimName: rabbitmq2-data
      - name: rabbitmq2-logs
        persistentVolumeClaim:
          claimName: rabbitmq2-logs
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -o yaml_files
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq3
  name: rabbitmq3
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq3
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -o yaml_files
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/rabbitmq: "true"
        io.kompose.service: rabbitmq3
    spec:
      containers:
      - command:
        - /usr/local/bin/cluster-entrypoint.sh
        image: rmq-dndio #rabbitmq:3-management
        imagePullPolicy: ""
        name: rabbitmq3
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/rabbitmq/.erlang.cookie
          name: rabbitmq3-claim0
        - mountPath: /usr/local/bin/cluster-entrypoint.sh
          name: rabbitmq3-claim1
        - mountPath: /var/lib/rabbitmq/
          name: rabbitmq3-data
        - mountPath: /var/log/rabbitmq
          name: rabbitmq3-logs
      hostname: rabbitmq3
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: rabbitmq3-claim0
        persistentVolumeClaim:
          claimName: rabbitmq3-claim0
      - name: rabbitmq3-claim1
        persistentVolumeClaim:
          claimName: rabbitmq3-claim1
      - name: rabbitmq3-data
        persistentVolumeClaim:
          claimName: rabbitmq3-data
      - name: rabbitmq3-logs
        persistentVolumeClaim:
          claimName: rabbitmq3-logs
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -o yaml_files
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: haproxy
  name: haproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: haproxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -o yaml_files
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/rabbitmq: "true"
        io.kompose.service: haproxy
    spec:
      containers:
      - image: ha-dndio #haproxy:1.7
        imagePullPolicy: ""
        name: haproxy
        ports:
        - containerPort: 15672
        - containerPort: 5672
        resources: {}
        volumeMounts:
        - mountPath: /usr/local/etc/haproxy/haproxy.cfg
          name: haproxy-claim0
          readOnly: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: haproxy-claim0
        persistentVolumeClaim:
          claimName: haproxy-claim0
          readOnly: true
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -o yaml_files
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: haproxy
  name: haproxy
spec:
  ports:
  - name: "15672"
    port: 15672
    targetPort: 15672
  - name: "5672"
    port: 5672
    targetPort: 5672
  selector:
    io.kompose.service: haproxy
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: rabbitmq
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/rabbitmq: "true"
  podSelector:
    matchLabels:
      io.kompose.network/rabbitmq: "true"
---
