src/aio/rmq_settings.yaml
#ntwork policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: rabbitmq
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/rabbitmq: "true"
  podSelector:
    matchLabels:
      io.kompose.network/rabbitmq: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -d -o rmq_files
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit1
  name: rabbit1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbit1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -d -o rmq_files
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/rabbitmq: "true"
        io.kompose.service: rabbit1
    spec:
      containers:
      - env:
        - name: RABBITMQ_ERLANG_COOKIE
          value: secret string
        - name: RABBITMQ_NODENAME
          value: rabbit1
        image: rabbitmq:3-management
        imagePullPolicy: ""
        name: rabbit1
        ports:
        - containerPort: 4369
        - containerPort: 5671
        - containerPort: 5672
        - containerPort: 15671
        - containerPort: 15672
        - containerPort: 25672
        resources: {}
        volumeMounts:
        - mountPath: /etc/rabbitmq/rabbitmq.config
          name: rabbit1-claim0
        - mountPath: /etc/rabbitmq/definitions.json
          name: rabbit1-claim1
      hostname: rabbit1
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: rabbit1-claim0
        persistentVolumeClaim:
          claimName: rabbit1-claim0
      - name: rabbit1-claim1
        persistentVolumeClaim:
          claimName: rabbit1-claim1
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -d -o rmq_files
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit1
  name: rabbitmq
spec:
  ports:
  - name: "4369"
    port: 4369
    targetPort: 4369
  - name: "5671"
    port: 5671
    targetPort: 5671
  - name: "5672"
    port: 5672
    targetPort: 5672
  - name: "15671"
    port: 15671
    targetPort: 15671
  - name: "15672"
    port: 15672
    targetPort: 15672
  - name: "25672"
    port: 25672
    targetPort: 25672
  selector:
    io.kompose.service: rabbit1
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -d -o rmq_files
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit2
  name: rabbit2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbit2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -d -o rmq_files
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/rabbitmq: "true"
        io.kompose.service: rabbit2
    spec:
      containers:
      - env:
        - name: RABBITMQ_ERLANG_COOKIE
          value: secret string
        - name: RABBITMQ_NODENAME
          value: rabbit2
        image: rabbitmq:3-management
        imagePullPolicy: ""
        name: rabbit2
        resources: {}
        volumeMounts:
        - mountPath: /etc/rabbitmq/rabbitmq.config
          name: rabbit2-claim0
        - mountPath: /etc/rabbitmq/definitions.json
          name: rabbit2-claim1
      hostname: rabbit2
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: rabbit2-claim0
        persistentVolumeClaim:
          claimName: rabbit2-claim0
      - name: rabbit2-claim1
        persistentVolumeClaim:
          claimName: rabbit2-claim1
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -d -o rmq_files
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit3
  name: rabbit3
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbit3
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -d -o rmq_files
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/rabbitmq: "true"
        io.kompose.service: rabbit3
    spec:
      containers:
      - env:
        - name: RABBITMQ_ERLANG_COOKIE
          value: secret string
        - name: RABBITMQ_NODENAME
          value: rabbit3
        image: rabbitmq:3-management
        imagePullPolicy: ""
        name: rabbit3
        resources: {}
        volumeMounts:
        - mountPath: /etc/rabbitmq/rabbitmq.config
          name: rabbit3-claim0
        - mountPath: /etc/rabbitmq/definitions.json
          name: rabbit3-claim1
      hostname: rabbit3
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: rabbit3-claim0
        persistentVolumeClaim:
          claimName: rabbit3-claim0
      - name: rabbit3-claim1
        persistentVolumeClaim:
          claimName: rabbit3-claim1
status: {}
---
